# cron-con-codex

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/architecture/: phase-0.md  phase-1-invoice-sync.md  phase-2-webhooks-reconciliation.md  phase-3-historical-backfill.md  phase-3-local-operation.md
docs/decisions/: 0001-modular-monolith.md
migrations/: env.py
migrations/versions/: 20260710_01_invoice_core.py  20260710_02_inbound_events.py  20260722_03_generic_resource_backfill.py
src/app/: __init__.py  cli.py  main.py
src/app/api/: health.py  webhooks.py
src/app/core/: config.py
src/app/db/: base.py  models.py  session.py
src/app/domain/: __init__.py  entity_repository.py  invoice_repository.py  invoices.py  webhooks.py
src/app/integrations/: __init__.py
src/app/integrations/alegra/: __init__.py  client.py  resources.py
src/app/services/: event_queue.py  invoice_reconciliation.py  invoice_sync.py  resource_sync.py  webhook_worker.py
tests/: test_alegra_client.py  test_config.py  test_database_url.py  test_health.py  test_invoice_normalization.py  test_resource_backfill.py  test_webhooks.py
